# fp-virtual-gestion-alumnos

./: .env.example  .gitignore  README.md  logger_config.py  main.py  models.py  pyproject.toml  pytest.ini
classes/: Centro.py  Ciclo.py  Modulo.py
scripts/: run_dev.py  run_pre.py  run_pro.py  run_test.py
templates/: nombreUsuarioActualizado.html
test/: conftest.py  test_api_client.py  test_integration.py
tests/: conftest.py  test_api_client.py  test_json_parser.py  test_moodle.py  test_moosh.py  test_verificacion_log.py
tests/data/: estudiantes_0001.json
utils/: alumnado.py  api_client.py  json_parser.py  moodle.py  moodle_queries.py  moosh.py  parser.py  temp_alumnado_loader.py  utils.py  verificacion_log.py
