[tool.poetry]
name = "fp-virtual-gestion-alumnos"
version = "0.1.0"
description = ""
authors = ["Dario Ureña <darioaxel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.2.1"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
