[tool.poetry]
name = "gestion-alumnos"
version = "0.1.0"
description = "Aplicación para la gestion automática del alumando en CampusDigitalFP"
authors = ["Dario Ureña <darioaxel@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "scripts"}]   

[tool.poetry.scripts]
test = "scripts.run_tests:main"
pre = "scripts.run_pre:main"

[tool.poetry.dependencies]
python = "^3.10"
asn1crypto = "^1.5.1"
certifi = "^2025.11.12"
chardet = "^5.2.0"
cryptography = "^46.0.3"
distro-info = "^1.0"
httplib2 = "^0.31.0"
idna = "^3.11"
keyring = "^25.7.0"
keyrings-alt = "^5.0.2"
launchpadlib = "^2.1.0"
lazr-restfulclient = "^0.14.6"
lazr-uri = "^1.0.7"
netifaces = "^0.11.0"
notify2 = "^0.3.1"
pam = "^0.2.0"
pexpect = "^4.9.0"
pillow = "^12.0.0"
py3dns = "^4.0.2"
pycairo = "^1.29.0"
pycurl = "^7.45.7"
python-dotenv = "^1.2.1"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
